# vendor

./: .gitignore  README.md
OpenRV/3.0.0/: CMakeLists.txt  package.py
blender/4.5.0/: CMakeLists.txt  build.bat  build.sh  package.py
cmake/3.31.7/: package.py
cycles/4.4.0/: CMakeLists.txt  package.py
davinci_resolve/20.0.1/: build.sh  package.py
davinciresolve/20.0.1/: build.bat  build.sh  package.py
ffmpeg/4.4.6/: CMakeLists.txt  package.py
git/2.50.1/: CMakeLists.txt  package.py
houdini/20.5.332/: package.py
houdini/20.5.654/: build.bat  build.sh  package.py
houdini/20.5.654/splash/: install.py
mari/7.1/: package.py
mari/7.1v2/: build.bat  build.sh  package.py
maya/2026/: build.bat  build.sh  package.py
miniconda/25.5.1/: build.bat  build.sh  package.py
nuke/16.0/: package.py
nuke/16.0v4/: build.bat  build.sh  package.py
openmoonray/2.15.0.1/: CMakeLists.txt  package.py
substance_designer/: package.py
substance_painter/: package.py
vscode/1.102.2/: build.bat  build.sh  package.py
